# prisma_sample

./: .env  .gitignore  Cargo.toml  LICENSE  README.md  compose.yaml
.cargo/: config.toml
prisma/: schema.prisma
prisma-cli/: Cargo.toml
prisma/migrations/20240324132924_init/: migration.sql
prisma/migrations/20240324133209_update_user_table/: migration.sql
src/: main.rs
