[package]
name = "prisma_sample"
version = "0.1.0"
edition = "2021"

[workspace]
resolver = "2"
members = ["prisma-cli"]

[dependencies]
axum = { version = "0.7.4" }
tokio = { version = "1.36.0", features = ["full"] }
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.11", default-features = false, features = [
    "mysql",
    "migrations",
] }
serde = { version = "1.0.197", features = ["derive"] }
tracing = "0.1.40"
anyhow = "1.0.81"
dotenvy = "0.15.7"
